creating a profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ minimal_mistakes_skin    : "dirt" #"default" #"aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "About Leonard Schummer"
-title_separator          : "-"
+title                    : "About - Leonard Schummer"
+title_separator          : ""
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Leonard Schummer"
 description              : ""
@@ -30,6 +30,7 @@ repository               : "leonardschummer1/leonardschummer1.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+og_image                 : /assets/images/headshotforwebsite.jpg
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
