--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,10 @@ description              : ""
 url                      : "https://leonardschummer1.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "leonardschummer1/leonardschummer1.github.io"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+teaser                   : "/assets/images/500x300.png"
+logo                     : "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-og_image                 : /assets/images/headshotforwebsite.jpg
+og_image                 : /assets/images/websitepic.jpg
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
